--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -8,7 +8,7 @@ $color-icon-dark: #767270;
 $main-bg-color: #EAE8E7;
 
 h4{
-  font-size: 1.2em !important;
+  font-size: 1em !important;
 }
 
 @mixin respond-to($media) {
@@ -67,6 +67,7 @@ h4{
   background-color: $bg-color-sidebar;
   h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     font-weight: inherit;
+    text-decoration: none;
   }
   h4{
     line-height: 2em !important;
@@ -135,4 +136,22 @@ md-list {
 .md-button.md-fab:not([disabled]):hover {
   opacity: 0.7;
   background-color: $bg-color-sidebar;
+}
+
+.resolve-loader{
+  display: block;
+  position: fixed;
+  z-index: 100;
+  background-color: #666;
+  opacity: 0.4;
+  background-repeat: no-repeat;
+  background-position: center;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  top: 0px;
+  .bottom-block{
+    text-align: center;
+    margin-top: 10px;
+  }
 }
