*trying to make work the resolveloader

--- a/client/main.scss
+++ b/client/main.scss
@@ -129,7 +129,7 @@ md-list {
 }
 
 .md-button.md-fab.md-fab-bottom-right {
-  top: 12px;
+  top: 12px !important;
   background-color: $bg-color-sidebar;
 }
 
