resolve loader to component

--- a/imports/ui/components/resolveLoader/resolveLoader.html
+++ b/imports/ui/components/resolveLoader/resolveLoader.html
@@ -1,4 +1,4 @@
-<div class="resolve-loader ng-hide">
+<div class="resolve-loader" ng-hide="resolveLoader.hide">
     <md-progress-linear md-mode="query"></md-progress-linear>
     <div class="bottom-block">
         <span>Loading application libraries...</span>
