--- a/imports/ui/components/admin/adminSidebar/adminSidebar.html
+++ b/imports/ui/components/admin/adminSidebar/adminSidebar.html
@@ -13,7 +13,7 @@
     <md-list>
         <md-item ng-repeat="item in adminSidebar.menu">
             <a ui-sref="{{item.state}}">
-                <md-item-content md-ink-ripple layout="row" layout-align="start center">
+                <md-item-content md-ink-ripple="#5DA4D9" layout="row" layout-align="start center">
                     <div class="inset">
                         <i class="material-icons">{{item.icon}}</i>
                     </div>
@@ -24,18 +24,6 @@
             </a>
         </md-item>
         <md-divider></md-divider>
-        <md-subheader>Management</md-subheader>
-        <md-item ng-repeat="item in admin">
-            <a>
-                <md-item-content md-ink-ripple layout="row" layout-align="start center">
-                    <div class="inset">
-                        <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
-                    </div>
-                    <div class="inset">{{item.title}}
-                    </div>
-                </md-item-content>
-            </a>
-        </md-item>
     </md-list>
 </md-sidenav>
 <!-- end the sidebar -->
