--- a/imports/ui/components/admin/listCoverLetters/listCoverLetters.html
+++ b/imports/ui/components/admin/listCoverLetters/listCoverLetters.html
@@ -1,4 +1,4 @@
-<p>list cover letters</p>
+<auth></auth>
 <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="showAdd($event)">
     <i class="material-icons margin-top-15">add</i>
 </md-button>
@@ -6,23 +6,18 @@
     <table id="table" class="table table-hover table-bordered">
         <thead>
         <tr>
-            <th>#</th>
-            <th>Issue</th>
-            <th>Status</th>
-            <th>Progress</th>
+            <th>Name</th>
+            <th>Slug</th>
+            <th>Created on</th>
+            <th>updated on</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td data-title="ID">ID</td>
-            <td data-title="Issue">ISSUE</td>
-            <td data-title="Status">STATUS</td>
-            <td data-title="Progress">
-                <md-progress-linear class="table-progress"
-                                    md-mode="determinate"
-                                    value="60">
-                </md-progress-linear>
-            </td>
+        <tr ng-repeat="letter in vm.coverLetters">
+            <td data-title="ID">{{letter.name}}</td>
+            <td data-title="Issue">{{letter.slug}}</td>
+            <td data-title="Status"></td>
+            <td data-title="Progress"></td>
         </tr>
         </tbody>
     </table>
