--- a/client/main.scss
+++ b/client/main.scss
@@ -176,6 +176,10 @@ md-list {
   overflow: hidden;
 }
 
+.ta-toolbar .ng-scope{
+  width: auto;
+}
+
 /* add generic styling for the editor */
 .ta-root.focussed > .ta-scroll-window.form-control {
   border-color: #66afe9;
