--- a/imports/ui/components/admin/listCoverLetters/listCoverLetters.html
+++ b/imports/ui/components/admin/listCoverLetters/listCoverLetters.html
@@ -14,7 +14,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="letter in vm.coverLetters">
+        <tr dir-paginate="letter in vm.coverLetters | itemsPerPage: vm.perPage" total-items="vm.coverLettersCount">
             <td data-title="ID" ui-sref="admin.coverLetters.edit({id: letter._id})">{{::letter.name}}</td>
             <td data-title="Issue" ui-sref="admin.coverLetters.edit({id: letter._id})">{{::letter.slug}}</td>
             <!--<td data-title="Status" ui-sref="admin.coverLetters.edit({id: letter._id})"></td>
@@ -26,3 +26,4 @@
         </tbody>
     </table>
 </div>
+<dir-pagination-controls on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
