--- a/imports/ui/components/front/sidebar/sidebar.html
+++ b/imports/ui/components/front/sidebar/sidebar.html
@@ -60,7 +60,7 @@
 
                 <md-list-item class="md-3-line">
                     <i class="md-avatar">
-                        <img src="http://kaworu.github.io/octostrap3/images/GitHub-Mark.png" alt="github logo" width="25px" height="25px"/>
+                        <img src="images\github-circle.png" alt="github logo" width="25px" height="25px"/>
                         <md-tooltip md-direction="top">
                             Github
                         </md-tooltip>
