-implement save function in profile form

--- a/imports/ui/components/admin/formProfile/formProfile.html
+++ b/imports/ui/components/admin/formProfile/formProfile.html
@@ -1,2 +1,2 @@
 <p>formProfile</p>
-<form sf-schema="vm.schema" sf-form="vm.form" sf-model="vm.model"></form>
+<form sf-schema="vm.schema" sf-form="vm.form" sf-model="vm.profile" ng-submit="vm.save(vm.profile)"></form>
